--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+
     <link href="assets/ratchet/css/ratchet.css" rel="stylesheet">
+    <link href="assets/css/pageslider.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -98,6 +101,7 @@
 <script src="lib/jquery.js"></script>
 <script src="lib/handlebars.js"></script>
 <script src="lib/router.js"></script>
+<script src="lib/pageslider.js"></script>
 
 <script src="js/services/websql/EmployeeService.js"></script>
 
