--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -56,6 +56,14 @@
           </a>
         </li>
         <li class="table-view-cell media">
+          <a hre="#" class="push-right add-contact-btn">
+            <span class="media-object pull-left"></span>
+            <div class="media-body">
+              Add to contacts
+            </div>
+          </a>
+        </li>
+        <li class="table-view-cell media">
           <img class="media-object pull-left emp-pic" src="assets/pics/{{pic}}">
           <div class="media-body">
             {{ firstName }} {{ lastName }}
